--- a/Podkast/Info.plist
+++ b/Podkast/Info.plist
@@ -6,7 +6,7 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>com.liamalexander.Podkast</string>
+			<string>com.liamalexander.snippets</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>podkast</string>
